--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       
       <!-- ===== Menu 2 : มีสินค้า 2 ชิ้น ===== -->
       <div class="card" data-menu="menu2"><img src="0.jpg"><div class="name">ALLERGIN {5ดาว}</div><div class="stock">(เหลือ 7 ชิ้น)</div><div class="price">90 THB</div></div>
-      <div class="card" data-menu="menu2"><img src="00.jpg"><div class="name">SIX NINE {69}</div><div class="stock">(สินค้าหมด)</div><div class="price">70 THB</div></div>
+      <div class="card" data-menu="menu2"><img src="00.jpg"><div class="name">SIX NINE {69}</div><div class="stock out">(สินค้าหมด)</div><div class="price">70 THB</div></div>
 
       
     </div>
