--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
       font-size: 16px;
       font-weight: bold;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      animation: starFloat 3s ease-in-out infinite, starGlow 1.8s ease-in-out infinite;
+    }
+
+    @keyframes starFloat {
+      0% { transform: translateY(0) rotate(0deg); box-shadow: 0 0 6px rgba(255,215,0,0.6); }
+      50% { transform: translateY(-4px) rotate(8deg); box-shadow: 0 0 14px rgba(255,215,0,1); }
+      100% { transform: translateY(0) rotate(0deg); box-shadow: 0 0 6px rgba(255,215,0,0.6); }
+    }
+
+    @keyframes starGlow {
+      0%,100% { text-shadow: 0 0 4px gold, 0 0 8px gold; }
+      50% { text-shadow: 0 0 10px gold, 0 0 20px gold; }
+    }
+      50% { transform: translateY(-4px) rotate(8deg); }
+      100% { transform: translateY(0) rotate(0deg); }
     }
 
     /* Layout */
@@ -73,7 +88,7 @@
       display:grid;
       grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
       gap:20px;
-      background-image: url("LOGO.jpg");
+      background-image: url();
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -206,6 +221,4 @@
     showMenu('menu1');
   </script>
 </body>
-</html>
-
 </html>
