--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
     /* ===== Layout ===== */
     .container { display:flex; padding:20px; gap:20px; }
 
+    /* ===== Responsive (มือถือ) ===== */
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        padding:10px;
+      }
+      .sidebar {
+        width:100%;
+      }
+      .products {
+        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+        padding:12px;
+      }
+      .card img {
+        height:160px;
+      }
+    }
+
     /* ===== Sidebar ===== */
     .sidebar {
       width:220px; background:#fff; border-radius:10px; padding:15px;
