Add thank you message to index.html
Added a thank you message section to the HTML.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
     .price { color:#000; }
     .stock { font-size:13px; color:#555; margin-top:4px; }
     .out { color:red; font-weight:bold; }
+  .thank-you {
+      margin: 20px;
+      padding: 15px;
+      text-align: center;
+      background: #fff;
+      border-radius: 12px;
+      font-weight: bold;
+      color: #b71c1c;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -192,6 +202,9 @@
       
     </div>
 
+  <!-- ===== Thank You Message ===== -->
+  <div class="thank-you">🙏 ขอบคุณที่สนับสนุนร้าน JR.21 MARBO V. เสมอมา 🙏</div>
+
   </div>
 
   <script>
@@ -216,3 +229,4 @@
   </script>
 </body>
 </html>
+
