--- a/index.html
+++ b/index.html
@@ -274,8 +274,15 @@
     <img id="modalImg" src="" alt="preview">
 </div>
 
+<!-- ===== Store Conditions ===== -->
+<div class="store-conditions">
+    <strong>📌 คำแนะนำของร้าน</strong><br>
+    • เช็คสินค้าหน้าร้านก่อนทุกครั้ง<br>
+    • สินค้าของแท้ 100%<br>
+</div>
+
 <!-- ===== Thank You Message (Fixed Bottom) ===== -->
-    <div class="thank-you">🙏 ขอบคุณที่สนับสนุนร้าน JR.21 MARBO V. เสมอมา 🙏</div>
+<div class="thank-you">🙏 ขอบคุณที่สนับสนุนร้าน JR.21 MARBO V. เสมอมา 🙏</div>
 </div>
 
 <script>
