--- a/index.html
+++ b/index.html
@@ -145,6 +145,26 @@
             padding: 15px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             transition: box-shadow 0.3s ease, transform 0.3s ease;
+            position: relative;
+        }
+        .card.best-seller::before {
+            content: "🔥 ขายดี";
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: linear-gradient(45deg, #ff5722, #ff9800);
+            color: #fff;
+            font-size: 12px;
+            font-weight: bold;
+            padding: 4px 8px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+            animation: bestPulse 1.5s ease-in-out infinite;
+        }
+        @keyframes bestPulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
         }
         .card.last-one {
             box-shadow: 0 0 0 2px #ff9800, 0 0 18px rgba(255,152,0,0.6);
@@ -244,17 +264,17 @@
     <div class="products" id="products">
         <!-- ===== Menu 1 : สินค้าเดิมทั้งหมด ===== -->
             <div class="card" data-menu="menu1"><img src="1.webp"><div class="name">SOUR GUMMY</div><div class="stock">(เหลือ 3 ชิ้น)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="2.webp"><div class="name">PINK BERRY</div><div class="stock">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="3.webp"><div class="name">WATERMELON BUBBLEGUM</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
+            <div class="card " data-menu="menu1"><img src="2.webp"><div class="name">PINK BERRY</div><div class="stock">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card best-seller" data-menu="menu1"><img src="3.webp"><div class="name">WATERMELON BUBBLEGUM</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="4.webp"><div class="name">WATERMELON</div><div class="stock">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="5.webp"><div class="name">PEACH STRAWBERRY</div><div class="stock">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="6.webp"><div class="name">KYOHO GRAPE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="7.webp"><div class="name">ZAPPLE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="8.webp"><div class="name">BLUE ICE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
+            <div class="card best-seller" data-menu="menu1"><img src="8.webp"><div class="name">BLUE ICE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="9.webp"><div class="name">PEACH</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="10.webp"><div class="name">APPLE ALOE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="11.webp"><div class="name">MIXBERRY</div><div class="stock">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="12.webp"><div class="name">RAINBOW CANDY</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
+            <div class="card best-seller" data-menu="menu1"><img src="12.webp"><div class="name">RAINBOW CANDY</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="13.webp"><div class="name">ORANGE SOUR</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="14.webp"><div class="name">COLA</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="15.webp"><div class="name">DOUBLE MINT</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
@@ -265,8 +285,8 @@
             <div class="card" data-menu="menu1"><img src="20.webp"><div class="name">GRAPE LYCHEE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
 
             <!-- ===== Menu 2 : มีสินค้า 2 ชิ้น ===== -->
-            <div class="card" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.KMH</div><div class="stock out">(สินค้าหมด)</div><div class="price">90 THB</div></div>
-            <div class="card" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.DK</div><div class="stock">(เหลือ 5 ชิ้น)</div><div class="price">90 THB</div></div>
+            <div class="card best-seller" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.KMH</div><div class="stock out">(สินค้าหมด)</div><div class="price">90 THB</div></div>
+            <div class="card best-seller" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.DK</div><div class="stock">(เหลือ 6 ชิ้น)</div><div class="price">90 THB</div></div>
             <div class="card" data-menu="menu2"><img src="0.jpg"><div class="name">SIX NINE {69} B.KMH</div><div class="stock out">(สินค้าหมด)</div><div class="price">70 THB</div></div>
             <div class="card" data-menu="menu2"><img src="0.jpg"><div class="name">SIX NINE {69} B.DK</div><div class="stock out">(สินค้าหมด)</div><div class="price">70 THB</div></div>
 
@@ -305,6 +325,18 @@
             card.style.display = card.dataset.menu === menu ? 'block' : 'none';
         });
 
+        // sort products every time menu changes
+        sortProducts(menu);
+
+        document.querySelectorAll('.menu').forEach(m => m.classList.remove('ice'));
+        const activeMenu = [...document.querySelectorAll('.menu')]
+            .find(m => m.getAttribute('onclick')?.includes(menu));
+        if (activeMenu) {
+            activeMenu.classList.add('ice');
+            setTimeout(() => activeMenu.classList.remove('ice'), 500);
+        }
+    });
+
         document.querySelectorAll('.menu').forEach(m => m.classList.remove('ice'));
         const activeMenu = [...document.querySelectorAll('.menu')]
             .find(m => m.getAttribute('onclick')?.includes(menu));
@@ -327,6 +359,28 @@
     document.getElementById('updateDate').textContent = today.toLocaleDateString('th-TH', options);
 
     showMenu('menu1');
+
+    // ===== Sort Products : Best Seller Top / Out of Stock Bottom =====
+    function sortProducts(menu) {
+        const container = document.getElementById('products');
+        const cards = [...container.querySelectorAll(`.card[data-menu="${menu}"]`)];
+
+        cards.sort((a, b) => {
+            const aBest = a.classList.contains('best-seller');
+            const bBest = b.classList.contains('best-seller');
+            const aOut = a.querySelector('.stock')?.classList.contains('out');
+            const bOut = b.querySelector('.stock')?.classList.contains('out');
+
+            if (aBest && !bBest) return -1;
+            if (!aBest && bBest) return 1;
+            if (aOut && !bOut) return 1;
+            if (!aOut && bOut) return -1;
+            return 0;
+        });
+
+        cards.forEach(card => container.appendChild(card));
+    }
+
 
     // ===== Image Preview Logic =====
     document.querySelectorAll('.card img').forEach(img => {
