--- a/index.html
+++ b/index.html
@@ -144,8 +144,29 @@
             border-radius: 15px;
             padding: 15px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            transition: box-shadow 0.3s ease, transform 0.3s ease;
+            transition: box-shadow 0.3s ease, transform 0.3s ease, opacity 0.3s ease;
             position: relative;
+        }
+
+        /* ===== Sold Out Style ===== */
+        .card.sold-out {
+            opacity: 0.45;
+            filter: grayscale(100%);
+            pointer-events: none;
+        }
+        .card.sold-out::after {
+            content: "SOLD OUT";
+            position: absolute;
+            inset: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 28px;
+            font-weight: bold;
+            color: #b71c1c;
+            background: rgba(255,255,255,0.6);
+            border-radius: 15px;
+            letter-spacing: 3px;
         }
         .card.best-seller::before {
             content: "🔥 ขายดี";
@@ -387,11 +408,19 @@
     
     // ===== Highlight Last Item =====
     document.querySelectorAll('.card').forEach(card => {
-        const stockText = card.querySelector('.stock')?.textContent || '';
+        const stockEl = card.querySelector('.stock');
+        const stockText = stockEl?.textContent || '';
+
         if (stockText.includes('เหลือ 1')) {
             card.classList.add('last-one');
+        }
+
+        // ===== Mark Sold Out =====
+        if (stockEl?.classList.contains('out')) {
+            card.classList.add('sold-out');
         }
     });
 </script>
 </body>
 </html>
+
