--- a/index.html
+++ b/index.html
@@ -330,10 +330,11 @@
     <strong>📌 คำแนะนำของร้าน</strong><br>
     • เช็คสินค้าหน้าร้านก่อนทุกครั้ง<br>
     • สินค้าของแท้ 100%<br>
+    • 🙏 ขอบคุณที่สนับสนุนร้าน JR.21 MARBO V. เสมอมา 🙏
 </div>
 
 <!-- ===== Thank You Message (Fixed Bottom) ===== -->
-<div class="thank-you">🙏 ขอบคุณที่สนับสนุนร้าน JR.21 MARBO V. เสมอมา 🙏</div>
+    
 </div>
 
 <script>
