--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <div class="card" data-menu="menu1"><img src="13.webp"><div class="name">ORANGE SOUR</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="14.webp"><div class="name">COLA</div><div class="stock">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="15.webp"><div class="name">DOUBLE MINT</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="16.webp"><div class="name">STRAWBERRY MILKSHAKE</div><div class="stock">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card" data-menu="menu1"><img src="16.webp"><div class="name">STRAWBERRY MILKSHAKE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="17.webp"><div class="name">MENTHOL</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="18.webp"><div class="name">SPARKING LEMON</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="19.webp"><div class="name">GRAPE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
