--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             <div class="card" data-menu="menu1"><img src="5.webp"><div class="name">PEACH STRAWBERRY</div><div class="stock ">(เหลือ 2 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="6.webp"><div class="name">KYOHO GRAPE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="7.webp"><div class="name">ZAPPLE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
-            <div class="card best-seller" data-menu="menu1"><img src="8.webp"><div class="name">BLUE ICE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
+            <div class="card best-seller" data-menu="menu1"><img src="8.webp"><div class="name">BLUE ICE</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="9.webp"><div class="name">PEACH</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="10.webp"><div class="name">APPLE ALOE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="11.webp"><div class="name">MIXBERRY</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
@@ -488,8 +488,8 @@
             <div class="card" data-menu="menu1"><img src="21.webp"><div class="name">STRAWBERRY</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
 
             <!-- ===== Menu 2 : มีสินค้า 2 ชิ้น ===== -->
-            <div class="card best-seller" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.KMH</div><div class="stock ">(เหลือ 5 ชิ้น)</div><div class="price">90 THB</div></div>
-            <div class="card best-seller" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.DK</div><div class="stock ">(เหลือ 12 ชิ้น)</div><div class="price">90 THB</div></div>
+            <div class="card best-seller" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.KMH</div><div class="stock ">(เหลือ 4 ชิ้น)</div><div class="price">90 THB</div></div>
+            <div class="card best-seller" data-menu="menu2"><img src="00.jpg"><div class="name">ALLERGIN {5ดาว} B.DK</div><div class="stock ">(เหลือ 10 ชิ้น)</div><div class="price">90 THB</div></div>
             <div class="card" data-menu="menu2"><img src="0.jpg"><div class="name">SIX NINE {69} B.KMH</div><div class="stock out">(สินค้าหมด)</div><div class="price">70 THB</div></div>
             <div class="card" data-menu="menu2"><img src="0.jpg"><div class="name">SIX NINE {69} B.DK</div><div class="stock out">(สินค้าหมด)</div><div class="price">70 THB</div></div>
 
