--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <!-- ===== Menu 1 : สินค้าเดิมทั้งหมด ===== -->
             <div class="card" data-menu="menu1"><img src="1.webp"><div class="name">SOUR GUMMY</div><div class="stock out">สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card " data-menu="menu1"><img src="2.webp"><div class="name">PINK BERRY</div><div class="stock ">(เหลือ 3 ชิ้น)</div><div class="price">420 THB</div></div>
-            <div class="card best-seller" data-menu="menu1"><img src="3.webp"><div class="name">WATERMELON BUBBLEGUM</div><div class="stock ">(เหลือ 2 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card best-seller" data-menu="menu1"><img src="3.webp"><div class="name">WATERMELON BUBBLEGUM</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="4.webp"><div class="name">WATERMELON</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="5.webp"><div class="name">PEACH STRAWBERRY</div><div class="stock ">(เหลือ 2 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="6.webp"><div class="name">KYOHO GRAPE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
@@ -480,7 +480,7 @@
             <div class="card" data-menu="menu1"><img src="13.webp"><div class="name">ORANGE SOUR</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="14.webp"><div class="name">COLA</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="15.webp"><div class="name">DOUBLE MINT</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="16.webp"><div class="name">STRAWBERRY MILKSHAKE</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card" data-menu="menu1"><img src="16.webp"><div class="name">STRAWBERRY MILKSHAKE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="17.webp"><div class="name">MENTHOL FREEZE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="18.webp"><div class="name">SPARKING LEMON</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="19.webp"><div class="name">GRAPE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
