--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <div class="card" data-menu="menu1"><img src="15.webp"><div class="name">DOUBLE MINT</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="16.webp"><div class="name">STRAWBERRY MILKSHAKE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="17.webp"><div class="name">MENTHOL FREEZE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="18.webp"><div class="name">SPARKING LEMON</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card" data-menu="menu1"><img src="18.webp"><div class="name">SPARKING LEMON</div><div class="stock out ">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="19.webp"><div class="name">GRAPE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="20.webp"><div class="name">GRAPE LYCHEE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="21.webp"><div class="name">STRAWBERRY</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
