--- a/index.html
+++ b/index.html
@@ -476,10 +476,10 @@
             <div class="card" data-menu="menu1"><img src="9.webp"><div class="name">PEACH</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="10.webp"><div class="name">APPLE ALOE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="11.webp"><div class="name">MIXBERRY</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
-            <div class="card best-seller" data-menu="menu1"><img src="12.webp"><div class="name">RAINBOW CANDY</div><div class="stock ">(เหลือ 3 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card best-seller" data-menu="menu1"><img src="12.webp"><div class="name">RAINBOW CANDY</div><div class="stock ">(เหลือ 2 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="13.webp"><div class="name">ORANGE SOUR</div><div class="stock ">(เหลือ 2 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="14.webp"><div class="name">COLA</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
-            <div class="card" data-menu="menu1"><img src="15.webp"><div class="name">DOUBLE MINT</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card" data-menu="menu1"><img src="15.webp"><div class="name">DOUBLE MINT</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="16.webp"><div class="name">STRAWBERRY MILKSHAKE</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="17.webp"><div class="name">MENTHOL FREEZE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="18.webp"><div class="name">SPARKING LEMON</div><div class="stock out ">(สินค้าหมด)</div><div class="price">420 THB</div></div>
