--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         <div class="products" id="products">
             <!-- ===== Menu 1 : สินค้าเดิมทั้งหมด ===== -->
             <div class="card" data-menu="menu1"><img src="1.webp"><div class="name">SOUR GUMMY</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
-            <div class="card " data-menu="menu1"><img src="2.webp"><div class="name">PINK BERRY</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card " data-menu="menu1"><img src="2.webp"><div class="name">PINK BERRY</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card best-seller" data-menu="menu1"><img src="3.webp"><div class="name">WATERMELON BUBBLEGUM</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="4.webp"><div class="name">WATERMELON</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="5.webp"><div class="name">PEACH STRAWBERRY</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
@@ -476,7 +476,7 @@
             <div class="card" data-menu="menu1"><img src="9.webp"><div class="name">PEACH</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="10.webp"><div class="name">APPLE ALOE</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="11.webp"><div class="name">MIXBERRY</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
-            <div class="card best-seller" data-menu="menu1"><img src="12.webp"><div class="name">RAINBOW CANDY</div><div class="stock ">(เหลือ 2 ชิ้น)</div><div class="price">420 THB</div></div>
+            <div class="card best-seller" data-menu="menu1"><img src="12.webp"><div class="name">RAINBOW CANDY</div><div class="stock ">(เหลือ 1 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="13.webp"><div class="name">ORANGE SOUR</div><div class="stock ">(เหลือ 2 ชิ้น)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="14.webp"><div class="name">COLA</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
             <div class="card" data-menu="menu1"><img src="15.webp"><div class="name">DOUBLE MINT</div><div class="stock out">(สินค้าหมด)</div><div class="price">420 THB</div></div>
